jilles      2006/01/19 16:25:49 UTC	(20060119-4585)
  Log:
  Add a return value to ircd_on_logout().
  If the return value is TRUE, the user was killed to force the logout (P10).
  Hmm, handle_burstlogin() does not reflect this in any kind of return value.
  

  Changes:	Modified:
  +5 -3		trunk/include/phandler.h (File Modified) 
  +9 -8		trunk/modules/nickserv/logout.c (File Modified) 
  +9 -8		trunk/modules/userserv/logout.c (File Modified) 
  +16 -4	trunk/protocol/asuka.c (File Modified) 
  +4 -3		trunk/protocol/bahamut.c (File Modified) 
  +16 -4	trunk/protocol/bircd.c (File Modified) 
  +3 -2		trunk/protocol/charybdis.c (File Modified) 
  +4 -3		trunk/protocol/dreamforge.c (File Modified) 
  +5 -4		trunk/protocol/hyperion.c (File Modified) 
  +4 -3		trunk/protocol/inspircd.c (File Modified) 
  +2 -2		trunk/protocol/ircnet.c (File Modified) 
  +4 -3		trunk/protocol/monkey.c (File Modified) 
  +4 -3		trunk/protocol/plexus.c (File Modified) 
  +4 -3		trunk/protocol/ptlink.c (File Modified) 
  +3 -2		trunk/protocol/ratbox.c (File Modified) 
  +4 -3		trunk/protocol/shadowircd.c (File Modified) 
  +4 -3		trunk/protocol/solidircd.c (File Modified) 
  +4 -3		trunk/protocol/sorcery.c (File Modified) 
  +4 -3		trunk/protocol/ultimate3.c (File Modified) 
  +16 -4	trunk/protocol/undernet.c (File Modified) 
  +4 -3		trunk/protocol/unreal.c (File Modified) 
  +6 -4		trunk/src/node.c (File Modified) 
  +3 -2		trunk/src/phandler.c (File Modified) 


jilles      2006/01/19 15:34:06 UTC	(20060119-4583)
  Log:
  Like kick(), msg(), etc, numeric_sts() takes a nick.
  

  Changes:	Modified:
  +43 -43	trunk/src/ptasks.c (File Modified) 


jilles      2006/01/19 15:18:35 UTC	(20060119-4581)
  Log:
  Change handle_version/admin/info/stats/trace() from char *nick
  to user_t *u.
  

  Changes:	Modified:
  +6 -6		trunk/include/extern.h (File Modified) 
  +6 -21	trunk/protocol/asuka.c (File Modified) 
  +6 -6		trunk/protocol/bahamut.c (File Modified) 