@@ -1,3 +1,15 @@
+jilles      2006/01/19 16:38:34 UTC	(20060119-4587)
+  Log:
+  Go back to non-P10 mode on reconnect (so it reconnects
+  properly after /squit services.).
+  
+
+  Changes:	Modified:
+  +1 -0		trunk/protocol/asuka.c (File Modified) 
+  +1 -0		trunk/protocol/bircd.c (File Modified) 
+  +1 -0		trunk/protocol/undernet.c (File Modified) 
+
+
 jilles      2006/01/19 16:25:49 UTC	(20060119-4585)
   Log:
   Add a return value to ircd_on_logout().
